--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.5",
     "mqtt": "^5.10.3",
     "next": "15.1.2",
     "react": "^18.2.0",
